<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/numWorkerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createtask_budget_numworker_label" />
        <EditText
            android:layout_gravity="right"
            android:id="@+id/numberWorkerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:inputType="number" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/typeBudgetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/toggletoswitch"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/numWorkerLayout"
        android:textOff="@string/createtask_budget_total_label"
        android:textOn="@string/createtask_budget_Hourlyrate_label"/>

    <TextView
        android:id="@+id/totalPriceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeBudgetBtn"
        android:text="@string/createtask_budget_price_label" />

    <EditText
        android:id="@+id/totalPriceEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalPriceView"
        android:inputType="number"/>

    <LinearLayout
        android:layout_below="@+id/typeBudgetBtn"
        android:id="@+id/hourlyRateLabelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createtask_budget_hour_label" />
            <EditText
                android:id="@+id/hourEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createtask_budget_priceperhoue_label" />
            <EditText
                android:id="@+id/pricePerHourEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/estimateBudgetLayout"
        android:layout_above="@+id/postATaskBtn"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createtask_budget_estimatedbudget_label" />
        <TextView
            android:id="@+id/estimateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/postATaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createtask_budget_posttask_label"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>