<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createtask_detail_title_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_title_edit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createtask_detail_detail_label"
        android:id="@+id/detail_detail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:lines="5"
        android:id="@+id/detail_detail_edit"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>

    <Button
        android:id="@+id/detail_upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createtask_detail_upload_label"/>


</LinearLayout>