<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/titleView"/>
    <TextView
        android:id="@+id/postByView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_open_posted_by"
        android:layout_toRightOf="@id/titleView"/>
    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/postByView"/>
    <TextView
        android:id="@+id/timeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/usernameView"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/totalBudgetView"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/profilePic"/>

    <Button
        android:id="@+id/offerBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_below="@+id/totalBudgetView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerBtn"
        android:text="@string/task_open_description"/>

    <TextView
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionView"/>

    <fragment
        android:id="@+id/mapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@id/detailView"/>

    <TextView
        android:id="@+id/offerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mapFragment"
        android:text="@string/task_open_offer"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/offerRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/offerView"/>

    <TextView
        android:id="@+id/commentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_open_comments"
        android:layout_below="@+id/offerRecycle"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/commentView"/>

</RelativeLayout>